--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
 test for netlify 210205
 <BR>
   append a comment from github edit at 210205 06:02<BR>
+  鉛筆ボタン押して、ここ更新するだけで、あっちも更新されている。ということで日本語を書いてみる<BR>
 </body>
 </html>
