--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html>
-<html><head>
+<!DOCTYPE html><html lang="jp"><head>
+<meta charset="utf-8">
 <title>test210205</title>
 </head>
 <body>
