--- a/index.html
+++ b/index.html
@@ -1,11 +1,48 @@
 <!DOCTYPE html><html lang="jp"><head>
-<meta charset="utf-8">
-<title>test210205</title>
-</head>
-<body>
-test for netlify 210205
-<BR>
-  append a comment from github edit at 210205 06:02<BR>
-  鉛筆ボタン押して、ここ更新するだけで、あっちも更新されている。ということで日本語を書いてみる<BR>
+	<meta charset="utf-8">
+	<title>dzone gamecenter</title>
+
+	<style>
+		body {
+			background-image: url(./figs/raspi_by_pakutaso.jpg) ;
+		}
+		h2{
+			font-size: 30px;
+			background-color: #FFFFAA;
+		}
+
+		p{
+			font-size: 25px;
+			background-color: #FFFFAA;
+
+		}
+		button{
+			font-size: 1.2em;
+			font-weight: bold;
+			padding: 0px 0px;
+			border-style: none;
+		}
+	</style>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animsition/4.0.2/css/animsition.min.css">
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/animsition/4.0.2/js/animsition.min.js"></script>
+	</head>
+<script>
+    $(function () {
+        $(".animsition").animsition({
+            option
+        });
+    });
+</script>
+<body >
+	<center>
+	<img src="./figs/title.svg"><BR><BR>
+<h2><a class="button animsition-link" href="./omikuji/omikuji.html" data-animsition-out-class="rotate-out-lg" >おみくじ</a></h2>
+<BR><BR>
+<h2><a href="./holoscope/holoscope.html">うらない</a> </h2>
+
+	</center>
+<Div Align="right"> <p>1 回 ： 1 とと </p></Div>
+
 </body>
 </html>
